[gd_scene load_steps=5 format=3 uid="uid://b5yajeq6o3fln"]

[ext_resource type="Script" uid="uid://bxlofyfm6dcl6" path="res://scenes/game/card_zone.gd" id="1_va8gc"]
[ext_resource type="Texture2D" uid="uid://bnuol0ewqd6p8" path="res://assets/highlights/card_border_highlight_pressed.png" id="2_70vai"]
[ext_resource type="Texture2D" uid="uid://yfm3tk3pgk1i" path="res://assets/highlights/card_border_highlight_selected.png" id="3_1gp3b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_derwr"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1.44392e-07, 0.340004, 0.324413, 1)

[node name="CardZone" type="PanelContainer"]
custom_minimum_size = Vector2(250, 350)
offset_right = 250.0
offset_bottom = 350.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_derwr")
script = ExtResource("1_va8gc")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="Layout" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="NameBox" type="HBoxContainer" parent="Margin/Layout"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ZoneName" type="Label" parent="Margin/Layout/NameBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Unset"

[node name="Dash" type="Label" parent="Margin/Layout/NameBox"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "-"

[node name="ZoneCount" type="Label" parent="Margin/Layout/NameBox"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="GridContainer" type="GridContainer" parent="Margin/Layout"]
layout_mode = 2
columns = 3

[node name="ZoneLocation1" type="MarginContainer" parent="Margin/Layout/GridContainer"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="ZoneLocation2" type="MarginContainer" parent="Margin/Layout/GridContainer"]
visible = false
custom_minimum_size = Vector2(250, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="ZoneLocation3" type="MarginContainer" parent="Margin/Layout/GridContainer"]
visible = false
custom_minimum_size = Vector2(250, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="ZoneLocation4" type="MarginContainer" parent="Margin/Layout/GridContainer"]
visible = false
custom_minimum_size = Vector2(250, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="ZoneLocation5" type="MarginContainer" parent="Margin/Layout/GridContainer"]
visible = false
custom_minimum_size = Vector2(250, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="ZoneLocation6" type="MarginContainer" parent="Margin/Layout/GridContainer"]
visible = false
custom_minimum_size = Vector2(250, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="ZoneButton" type="TextureButton" parent="."]
visible = false
layout_mode = 2
texture_pressed = ExtResource("2_70vai")
texture_hover = ExtResource("3_1gp3b")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="ZoneButton" to="." method="_on_zone_button_pressed"]
